syntax = "proto3";
package role;

option go_package = "nfxid/protos/gen/access/role;rolepb";

import "google/protobuf/timestamp.proto";

// 访问范围类型枚举
enum AccessScopeType {
  ACCESS_SCOPE_TYPE_UNSPECIFIED = 0;
  ACCESS_SCOPE_TYPE_TENANT = 1;  // 租户范围
  ACCESS_SCOPE_TYPE_APP = 2;     // 应用范围
  ACCESS_SCOPE_TYPE_GLOBAL = 3;  // 全局范围
}

// 角色信息
message Role {
  string id = 1;                  // 角色ID (UUID)
  string key = 2;                 // 唯一键 (varchar(255))
  string name = 3;                // 角色名称 (varchar(255))
  optional string description = 4; // 描述 (text)
  AccessScopeType scope_type = 5; // 范围类型：TENANT, APP, GLOBAL
  bool is_system = 6;             // 是否系统角色
  google.protobuf.Timestamp created_at = 7;          // 创建时间
  google.protobuf.Timestamp updated_at = 8;          // 更新时间
  optional google.protobuf.Timestamp deleted_at = 9; // 软删除时间
}

// Role 服务 - 供其他服务通过 gRPC 管理角色
service RoleService {
  // 根据ID获取角色
  rpc GetRoleByID (GetRoleByIDRequest) returns (GetRoleByIDResponse);
  
  // 根据Key获取角色
  rpc GetRoleByKey (GetRoleByKeyRequest) returns (GetRoleByKeyResponse);
  
  // 获取所有角色列表
  rpc GetAllRoles (GetAllRolesRequest) returns (GetAllRolesResponse);
  
  // 批量获取角色
  rpc BatchGetRoles (BatchGetRolesRequest) returns (BatchGetRolesResponse);
}

// Role Service Messages
message GetRoleByIDRequest {
  string id = 1;
}

message GetRoleByIDResponse {
  Role role = 1;
}

message GetRoleByKeyRequest {
  string key = 1;
}

message GetRoleByKeyResponse {
  Role role = 1;
}

message GetAllRolesRequest {
  optional AccessScopeType scope_type = 1;
  optional bool is_system = 2;
}

message GetAllRolesResponse {
  repeated Role roles = 1;
}

message BatchGetRolesRequest {
  repeated string ids = 1;
}

message BatchGetRolesResponse {
  repeated Role roles = 1;
}
